compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__exhaustiveness__case_error_prints_module_when_shadowed.snap
---
source: compiler-core/src_refactored/__core/type_/tests/exhaustiveness.rs
assertion_line: 1186
expression: "\nimport mod.{Wibble}\ntype Wibble { Wibble Wobble }\npub fn main() {\n  let wibble = mod.Wibble\n  case wibble {\n    mod.Wobble -> Nil\n  }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE
-- mod.gleam
pub type Wibble { Wibble Wobble }

-- main.gleam

import mod.{Wibble}
type Wibble { Wibble Wobble }
pub fn main() {
  let wibble = mod.Wibble
  case wibble {
    mod.Wobble -> Nil
  }
}


----- ERROR
error: Inexhaustive patterns
  ┌─ /src/one/two.gleam:6:3
  │  
6 │ ╭   case wibble {
7 │ │     mod.Wobble -> Nil
8 │ │   }
  │ ╰───^

This case expression does not have a pattern for all possible values. If it
is run on one of the values without a pattern then it will crash.

The missing patterns are:

    mod.Wibble
