compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__exhaustiveness__case_error_prints_prelude_module_unqualified.snap
---
source: compiler-core/src_refactored/__core/type_/tests/exhaustiveness.rs
assertion_line: 1158
expression: "\npub fn main(result: Result(Nil, Nil)) {\n  case result {\n    Ok(Nil) -> Nil\n  }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn main(result: Result(Nil, Nil)) {
  case result {
    Ok(Nil) -> Nil
  }
}


----- ERROR
error: Inexhaustive patterns
  ┌─ /src/one/two.gleam:3:3
  │  
3 │ ╭   case result {
4 │ │     Ok(Nil) -> Nil
5 │ │   }
  │ ╰───^

This case expression does not have a pattern for all possible values. If it
is run on one of the values without a pattern then it will crash.

The missing patterns are:

    Error(_)
