compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__exhaustiveness__case_error_prints_prelude_module_when_shadowed.snap
---
source: compiler-core/src_refactored/__core/type_/tests/exhaustiveness.rs
assertion_line: 1171
expression: "\nimport gleam\ntype MyResult { Ok Error }\npub fn main(res: Result(Int, Nil)) {\n  case res {\n    gleam.Ok(n) -> Nil\n  }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

import gleam
type MyResult { Ok Error }
pub fn main(res: Result(Int, Nil)) {
  case res {
    gleam.Ok(n) -> Nil
  }
}


----- ERROR
error: Inexhaustive patterns
  ┌─ /src/one/two.gleam:5:3
  │  
5 │ ╭   case res {
6 │ │     gleam.Ok(n) -> Nil
7 │ │   }
  │ ╰───^

This case expression does not have a pattern for all possible values. If it
is run on one of the values without a pattern then it will crash.

The missing patterns are:

    gleam.Error(_)
