compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__exhaustiveness__correct_missing_patterns_for_opaque_type_in_definition_module.snap
---
source: compiler-core/src_refactored/__core/type_/tests/exhaustiveness.rs
assertion_line: 1885
expression: "\npub opaque type Wibble { Wibble(Int) Wobble(String) }\n\npub fn main(w: Wibble) {\n  case w {}\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub opaque type Wibble { Wibble(Int) Wobble(String) }

pub fn main(w: Wibble) {
  case w {}
}


----- ERROR
error: Inexhaustive patterns
  ┌─ /src/one/two.gleam:5:3
  │
5 │   case w {}
  │   ^^^^^^^^^

This case expression does not have a pattern for all possible values. If it
is run on one of the values without a pattern then it will crash.

The missing patterns are:

    Wibble(_)
    Wobble(_)
