compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__exhaustiveness__custom_1.snap
---
source: compiler-core/src_refactored/__core/type_/tests/exhaustiveness.rs
assertion_line: 781
expression: "\npub type Type {\n  One\n  Two\n}\n\npub fn main(x) {\n  case x {\n    One -> 1\n  }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub type Type {
  One
  Two
}

pub fn main(x) {
  case x {
    One -> 1
  }
}


----- ERROR
error: Inexhaustive patterns
   ┌─ /src/one/two.gleam:8:3
   │  
 8 │ ╭   case x {
 9 │ │     One -> 1
10 │ │   }
   │ ╰───^

This case expression does not have a pattern for all possible values. If it
is run on one of the values without a pattern then it will crash.

The missing patterns are:

    Two
